--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         style="@style/Widget.AppCompat.Toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="#E8EEED"
+        android:background="@color/colorPrimaryDark"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
@@ -27,6 +27,7 @@
         android:id="@+id/mainPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,7 +39,9 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#EFF5F4" />
+            android:background="@color/colorPrimaryLight"
+            app:tabIndicator="@color/colorSecondary"
+            app:tabIndicatorColor="@color/colorSecondaryDark" />
 
     </androidx.viewpager.widget.ViewPager>
 </androidx.constraintlayout.widget.ConstraintLayout>
