--- a/app/src/main/res/layout/custom_record.xml
+++ b/app/src/main/res/layout/custom_record.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/simple_border"
         android:fontFamily="sans-serif-medium"
         android:padding="16dp"
-        android:textColor="@android:color/primary_text_light"
+        android:textColor="@color/colorText"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +24,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:elevation="2dp"
         android:fontFamily="sans-serif-medium"
         android:text="Add Record"
+        android:translationZ="2dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
