--- a/app/src/main/res/layout/password_prompt.xml
+++ b/app/src/main/res/layout/password_prompt.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
@@ -17,8 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/colorSecondaryDark"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:textColor="@color/colorText"
         android:textSize="20sp" />
 </LinearLayout>
