--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -3,8 +3,11 @@
     android:id="@+id/record"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#E6E6E6"
+    android:background="@drawable/rounded_edge"
+    android:backgroundTint="@color/colorPrimary"
+    android:backgroundTintMode="multiply"
     android:padding="16dp"
+    android:textColor="@color/colorText"
     android:textSize="20sp">
 
 </TextView>
