--- a/app/src/main/res/layout/writer_fragment.xml
+++ b/app/src/main/res/layout/writer_fragment.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="4dp"
+    android:background="@color/colorPrimary"
+    android:backgroundTintMode="multiply"
+    android:elevation="2dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/records_viewer"
@@ -22,9 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorSecondaryDark"
         android:ems="10"
         android:hint="Confirm password"
         android:inputType="textPassword"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -34,9 +39,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorSecondaryDark"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toTopOf="@+id/password_confirmation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -75,6 +82,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:text="Delete All" />
 
         <Button
@@ -84,6 +92,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:text="Write" />
 
     </LinearLayout>
