--- a/app/src/main/res/layout/password_prompt.xml
+++ b/app/src/main/res/layout/password_prompt.xml
@@ -18,10 +18,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorSecondaryDark"
+        android:backgroundTint="@color/colorSecondary"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
         android:textColor="@color/colorText"
+        android:textCursorDrawable="@drawable/text_cursor"
         android:textSize="20sp" />
 </LinearLayout>
