--- a/app/src/main/res/drawable/rounded_edge.xml
+++ b/app/src/main/res/drawable/rounded_edge.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorSecondary"/>
+    <solid android:color="@color/colorDarkGray"/>
     <corners android:bottomRightRadius="3dp" android:bottomLeftRadius="3dp"
         android:topLeftRadius="3dp" android:topRightRadius="3dp"/>
 
