--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,8 +15,9 @@
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="CustomAlertDialog" parent="Theme.AppCompat.Dialog.Alert">
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:background">@color/colorSecondary</item>
+        <item name="android:textColor">@color/colorText</item>
     </style>
 
 
