--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -91,6 +91,24 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
+                android:id="@+id/change_help_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/change_help_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/change_help_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:lineSpacingMultiplier="1.5"
+                android:text="@string/change_help_desc"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+            <TextView
                 android:id="@+id/remove_help_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
